syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.helycopternicht.epocket.api";

message Empty {}

enum Currency {
    EUR = 0;
    USD = 1;
    GBP = 2;
}

message User {
    int64 userId = 1;
    string name = 2;
}

message TransactionRequest {
    int64 userId = 1;
    double amount = 2;
    Currency currency = 3;
}

message UserBalanceRequest {
    int64 userId = 1;
}

message CurrencyBalance {
    Currency currency = 1;
    double balance = 2;
}

message UserBalanceResponse {
    User user = 1;
    repeated CurrencyBalance balances = 2;
}

service WalletService {

    rpc doDeposit(TransactionRequest) returns (Empty){}

    rpc doWithdraw(TransactionRequest) returns (Empty){}

    rpc getUserBalance(UserBalanceRequest) returns (UserBalanceResponse){}

}